--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/server.js\""
+    "dev": "concurrently \"tsc -w\" \"nodemon dist/server.js\"",
+    "build": "tsc",
+    "start": "node dist/server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ManashJBofficial/anc_interview_project.git"
   },
   "author": "Manash Jyoti Baruah",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ManashJBofficial/anc_interview_project/issues"
   },
@@ -22,12 +24,14 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "morgan": "^1.10.0",
     "redis": "^4.6.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2"
   }
